# sql-greylist-milter

./: Cargo.toml
entity/: Cargo.toml
entity/src/: incoming_mail.rs  lib.rs  mail.rs  mail_recipient.rs  prelude.rs  recipient.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs  m20220101_000001_create_tables.rs
src/: config.rs  lib.rs  main.rs  main1.rs  settings.rs  tests.rs
src/entities/: email_status.rs  incoming_mail.rs  mod.rs  prelude.rs
tests/: tests.rs
tests/common/: config.toml  mod.rs
