[package]
name = "sql-greylist-milter"
version = "0.0.1"
description = "Greylist using Postgres"
license = "GPL-3.0-or-later"
publish = false
edition = "2021"

[dependencies]
chrono = "0.4"
config-file = "0.2"
indymilter = "0.2"
sea-orm = { version = "0.12", features = [ "runtime-tokio-rustls", "sqlx-postgres", "macros" ] }
serde = "1"
tokio = { version = "1", features = [ "rt-multi-thread", "signal" ] }
