[package]
name = "sql-greylist-milter"
version = "0.0.1"
description = "Greylist using Postgres"
license = "GPL-3.0-or-later"
publish = false
edition = "2021"

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

chrono = "0.4"
config = { version = "0.13", default-features = false, features = [ "toml" ] }
indymilter = "0.2"
ipnet = "2"
sea-orm = { version = "0.12", features = [ "runtime-tokio-rustls", "sqlx-postgres", "macros" ] }
serde = "1"
tokio = { version = "1", features = [ "rt-multi-thread", "signal" ] }
tracing = "0.1"
tracing-subscriber = "0.3"

[workspace]
members = [".", "entity", "migration"]

[dev-dependencies]
byte-strings = "0.3"
indymilter-test = "0.0.3"